2.5.1
 - build: bump dclab from 0.29.1 to 0.32.4 (this should have happened
   in the 2.5.0 release which introduced R-lme4 analysis)
 - ref: key [calculation]: "emodulus model" is deprecated in dclab
 - ref: use "lut_identifier" instead of deprecated "method" keyword when
   retrieving isoelasticity lines
2.5.0
 - feat: implement linear-mixed effects models with R/lme4 (#55)
 - ci: overhauled build process
2.4.15
 - ci: fix rtd build
 - fix: typo in infobox in analysis view (#69)
 - fix: macOS builds did not use our pyqtgraph fork (reported in #70)
2.4.14
 - maintenance release
2.4.13
 - maintenance release
2.4.12
 - maintenance release
2.4.11
 - maintenance release
2.4.10
 - maintenance release
2.4.9
 - maintenance release
2.4.8
 - maintenance release
2.4.7
 - maintenance release
2.4.6
 - maintenance release
2.4.5
 - maintenance release
2.4.4
 - fix: box filters selections bled to other filters (#67)
 - build: do not use development version of dclab
 - ci: move to GitHub Actions
2.4.3
 - enh: improve UI (tooltips, icons)
 - build: Windows build won't start due to breaking change in
   Windows ucrtbase.dll (#64)
 - build: Migrate Windows build to PyInstaller 4.1
2.4.2
 - fix: a regression introduced during refactoring in 2.4.0
   made it impossible to select the temperature for known
   media
 - fix: allow to reorder the dataset list (#46)
 - enh: iconify buttons at top of Analysis View
2.4.1
 - fix: strip white-space characters from line edits in the
   preferences to avoid line breaks introduced in the API key
   via copy-paste
 - fix: not possible to create plots for datasets without the
   bright_avg feature; added a check for feature availability
   before updating the interface (#62)
2.4.0
 - feat: allow to set Young's modulus parameters for all
   open datasets via the "Bulk action" menu (#60)
 - fix: force temperature for Young's modulus computation
   to the value stored in the dataset for the "config"
   scenario
 - enh: update menu keyboard shortcuts