@@ -1,6 +1,7 @@
 2.5.1
  - build: bump dclab from 0.29.1 to 0.32.4 (this should have happened
    in the 2.5.0 release which introduced R-lme4 analysis)
+ - tests: introduce manual tests that require a human in "tests-manual"
  - ref: key [calculation]: "emodulus model" is deprecated in dclab
  - ref: use "lut_identifier" instead of deprecated "method" keyword when
    retrieving isoelasticity lines
